force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Campo para armazenar a marca do veículo.</description>
    <label>Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toyota</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Fiat</fullName>
            </value>
            <value>
                <fullName>Chevrolet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>