force-app/main/default/objects/Product2/fields/FipeCode__c.field-meta.xml
<CustomField>
    <fullName>FipeCode__c</fullName>
    <description>Campo utilizado para armazenar o FIPE Code dos veículos</description>
    <label>Código FIPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>