force-app/main/default/objects/Product2/fields/ModelYear__c.field-meta.xml
<CustomField>
    <fullName>ModelYear__c</fullName>
    <description>Campo que armazena o Ano/Modelo do carro.</description>
    <label>Ano/Modelo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>