force-app/main/default/objects/Product2/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <description>Quantidade do estoque</description>
    <label>Estoque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>