force-app/main/default/objects/Product2/fields/Transmission__c.field-meta.xml
<CustomField>
    <fullName>Transmission__c</fullName>
    <description>Tipo de transmissão do carro.</description>
    <inlineHelpText>Selecione o tipo de transmissão do carro.</inlineHelpText>
    <label>Transmissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automática</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>