force-app/main/default/objects/Product2/listViews/CarrosDetalhados.listView-meta.xml
<ListView>
    <fullName>CarrosDetalhados</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Brand__c</columns>
    <columns>ModelYear__c</columns>
    <columns>Transmission__c</columns>
    <columns>Stock__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ModelYear__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Brand__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Carros Detalhados</label>
</ListView>